--- a/FastBurgAlgorithmLibrary/FastBurgAlgorithmLibrary.csproj
+++ b/FastBurgAlgorithmLibrary/FastBurgAlgorithmLibrary.csproj
@@ -115,6 +115,9 @@
       <Version>6.1.5</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="vos_fastburg.pdf" />
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
