Added command to find packages names

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,5 @@ solution: FastBurgAlgorithmLibrary.sln
 script:
   - xbuild /p:Configuration=Release FastBurgAlgorithmLibrary.sln
   - mono ./packages/xunit.runners.*/tools/xunit.console.clr4.exe ./FastBurgAlgorithmLibraryUnitTests/bin/Release/FastBurgAlgorithmLibraryUnitTests.dll
+  - cd ./packages
   - dir
