--- a/FastBurgAlgorithmLibraryUnitTests/packages.config
+++ b/FastBurgAlgorithmLibraryUnitTests/packages.config
@@ -9,4 +9,5 @@
   <package id="xunit.extensibility.execution" version="2.3.1" targetFramework="net461" />
   <package id="xunit.runner.console" version="2.3.1" targetFramework="net461" developmentDependency="true" />
   <package id="xunit.runner.visualstudio" version="2.3.1" targetFramework="net461" developmentDependency="true" />
+  <package id="xunit.runners" version="1.9.2" targetFramework="net461" />
 </packages>
