--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: csharp
 solution: FastBurgAlgorithmLibrary.sln
-mono: none
-dotnet: 2.1.3
+mono: 5.2.0
+dotnet: 2.0.0
+install:
+  - export FrameworkPathOverride=$(dirname $(which mono))/../lib/mono/4.5/
 script:
   - dotnet restore
   - dotnet build
