--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ mono: 5.2.0
 dotnet: 2.0.0
 install:
   - export FrameworkPathOverride=$(dirname $(which mono))/../lib/mono/4.5/
-  - nuget restore solution-name.sln
+  - nuget restore FastBurgAlgorithmLibrary.sln
 script:
   - dotnet restore
   - dotnet build /t:restore
