--- a/FastBurgAlgorithmLibraryUnitTests/packages.config
+++ b/FastBurgAlgorithmLibraryUnitTests/packages.config
@@ -8,5 +8,6 @@
   <package id="NUnit.Extension.NUnitV2ResultWriter" version="3.5.0" targetFramework="net461" />
   <package id="NUnit.Extension.TeamCityEventListener" version="1.0.3" targetFramework="net461" />
   <package id="NUnit.Extension.VSProjectLoader" version="3.7.0" targetFramework="net461" />
+  <package id="NUnit.Runners" version="3.8.0" targetFramework="net461" />
   <package id="NUnit3TestAdapter" version="3.10.0" targetFramework="net461" />
 </packages>
