--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,8 @@ dist: trusty
 solution: FastBurgAlgorithmLibrary.sln
 install:
   - nuget restore FastBurgAlgorithmLibrary.sln
-  - nuget install NUnit.Runners -Version 3.8.0 -OutputDirectory testrunner
 script:
   - xbuild /p:Configuration=Release FastBurgAlgorithmLibrary.sln
-  - mono ./testrunner/NUnit.Runners.3.8.0/tools/nunit-console.exe ./FastBurgAlgorithmLibraryUnitTests/bin/Release/FastBurgAlgorithmLibraryUnitTests.dll
-  - cd ./testrunner/NUnit.Runners.3.8.0
-  - dir
-  - cd ..
-  - cd ..
-  - cd ./packages
+  - mono ./packages/NUnit.ConsoleRunner.*/tools/nunit3-console.exe ./FastBurgAlgorithmLibraryUnitTests/bin/Release/FastBurgAlgorithmLibraryUnitTests.dll
+  - cd ./testrunner/NUnit.ConsoleRunner.3.8.0/tools
   - dir
