Added unit test

--- a/FastBurgAlgorithmLibraryUnitTests/FastBurgAlgorithmLibraryUnitTests.csproj
+++ b/FastBurgAlgorithmLibraryUnitTests/FastBurgAlgorithmLibraryUnitTests.csproj
@@ -47,11 +47,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="FastBurgPredictionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FastBurgAlgorithmLibrary\FastBurgAlgorithmLibrary.csproj">
+      <Project>{ccc81efc-99bb-4b48-97e0-95d5a6232592}</Project>
+      <Name>FastBurgAlgorithmLibrary</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
