--- a/FastBurgAlgorithmLibrary/FastBurgAlgorithmLibrary.csproj
+++ b/FastBurgAlgorithmLibrary/FastBurgAlgorithmLibrary.csproj
@@ -40,8 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FastBurgAlgorithm64.cs" />
-    <Compile Include="FastBurgAlgorithm128.cs" />
+    <Compile Include="FastBurgAlgorithm.cs" />
+    <Compile Include="Operations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
