--- a/FastBurgAlgorithmLibrary/FastBurgAlgorithmLibrary.csproj
+++ b/FastBurgAlgorithmLibrary/FastBurgAlgorithmLibrary.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>FastBurgAlgorithmLibrary</RootNamespace>
     <AssemblyName>FastBurgAlgorithmLibrary</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
